# user-sync.py

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Dockerfile-centos  Gemfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  _config.yml  appveyor.yml  example-config.yml  index.html  requirements.txt  setup.cfg  setup.py  tests.py  user-sync.spec
.appveyor/: build.ps1  test.ps1
.build/: hook-keyring.py  pre_build.py
.changelog/: changelog.md  latest.md
.github/: pull_request_template.md
.pyinstaller/: build.bat  build.sh  hook-user_sync.connector.directory.py
.travis/: build-py27.sh  build-py36-centos.sh  build-py36.sh  install-centos.sh  install-ubuntu.sh
_includes/: head.html  header.html  nav.html
_layouts/: default.html
_sass/: _base.scss
aedash_connector/: app.py  auth_store.py  config.py  connector.py  input.py  lockfile.py
bp/: index.md
config_files/: connector-csv.yml  connector-ldap.yml  connector-ldap1.yml  connector-ldap3.yml  connector-okta.yml  connector-umapi.yml  extension-config.yml  private.key  testusers.csv  user-sync-config.yml
de/: index.md
docs/: Gemfile  User Sync Guide.docx  _config.yml  about.md  index.html  index.md  style_guide.md
en/: index.md
es/: index.md
examples/: example.connector-ldap-source-filter.yml  example.connector-ldap.yml  example.dashboard-config.yml  example.extension.user-sync-config.yml  example.extension.users-file.csv  example.user-sync-config.yml  example.users-file.csv
fr/: index.md
jp/: index.md
sign_client/: client.py  pyproject.toml  setup.py
sign_client/sign_client/: client.py  error.py  model.py
sign_client/sign_client_tests/: test_model.py
test_framework/: Makefile  README.md  setup.py
tests/: __init__.py  config_file_test.py  config_test.py  conftest.py  helper.py  helper_test_bad.csv  helper_test_w.csv  private.key  pub_cert.crt  rules_test.py  test_cache.py  test_certgen.py  test_cli.py  (+25 more)
(+726 files in other folders)
