[tool.poetry]
name = "sign-client"
version = "0.2.0"
description = "Client for the Adobe Sign API"
authors = ["Andrew Dorton <adorton@adobe.com>"]
maintainers = ["Andrew Dorton <adorton@adobe.com>"]
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
]
license = "MIT"
packages = [
    { include = "sign_client" }
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
